--- a/gpanel/assets/lib/bootstrap/css/bootstrap.css
+++ b/gpanel/assets/lib/bootstrap/css/bootstrap.css
@@ -1729,10 +1729,10 @@ output {
 }
 
 .form-control:focus {
-  border-color: #66afe9;
+  border-color: rgb(71, 164, 71);
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(71, 164, 71, 0.6);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(71, 164, 71, 0.6);
 }
 
 .form-control[disabled],
