--- a/gpanel/assets/lib/switch/static/stylesheets/bootstrap-switch.css
+++ b/gpanel/assets/lib/switch/static/stylesheets/bootstrap-switch.css
@@ -209,15 +209,15 @@
 .has-switch span.switch-left {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #005fcc;
-  background-image: -moz-linear-gradient(top, #0044cc, #0088cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0044cc), to(#0088cc));
-  background-image: -webkit-linear-gradient(top, #0044cc, #0088cc);
-  background-image: -o-linear-gradient(top, #0044cc, #0088cc);
-  background-image: linear-gradient(to bottom, #0044cc, #0088cc);
+  background-color: #47a447;
+  background-image: -moz-linear-gradient(top, #47a447, #4cae4c);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#47a447), to(#4cae4c));
+  background-image: -webkit-linear-gradient(top, #47a447, #4cae4c);
+  background-image: -o-linear-gradient(top, #47a447, #4cae4c);
+  background-image: linear-gradient(to bottom, #47a447, #4cae4c);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0044cc', endColorstr='#ff0088cc', GradientType=0);
-  border-color: #0088cc #0088cc #005580;
+  border-color: #47a447 #47a447 #4cae4c;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   *background-color: #0088cc;
   /* Darken IE7 buttons by default so they stand out more given they won't have borders */
