--- a/gpanel/assets/css/main.css
+++ b/gpanel/assets/css/main.css
@@ -634,10 +634,10 @@ body.padTop53 {
 .inner {
   position: relative;
   min-height: 1px;
-  padding-right: 10px;
-  padding-left: 10px;
+
   background: #fff;
   border: 10px solid #e4e4e4;
+  padding: 15px;
 }
 
 @media (min-width: 768px) {
